--- a/aula23.08/index.html
+++ b/aula23.08/index.html
@@ -26,7 +26,7 @@
         </div>
 
         <div class="tela">
-            <img src="foto3.jfif" alt="">
+            <img src="foto3.jpg" alt="">
             <h3>CAPUCTINO</h3>
             <p><a href=""><span>Pedir</span></a></p>
         </div>
